package app.entities;

public interface IEntity {
    Long getId();
}
